--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.24.0",
     "@coinbase/wallet-sdk": "^4.3.2",
+    "@coral-xyz/anchor": "^0.31.1",
     "@emotion/is-prop-valid": "^1.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -21,12 +22,15 @@
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.14.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.75.5",
     "@types/three": "^0.176.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v4-core": "^1.0.0",
     "@uniswap/widgets": "2.59.0",
     "@visx/responsive": "^3.10.2",
+    "assert": "^2.1.0",
     "autoprefixer": "10.4.19",
     "browserify-zlib": "^0.2.0",
     "clsx": "^2.1.1",
