--- a/roulette/anchor/tsconfig.json
+++ b/roulette/anchor/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "types": ["jest", "node"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "types": ["jest", "mocha", "node"],
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es2015"],
     "target": "esnext",
