--- a/roulette/package.json
+++ b/roulette/package.json
@@ -59,7 +59,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/chai": "^5.2.2",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
@@ -67,12 +67,15 @@
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.5",
     "esrun": "^3.2.30",
-    "jest": "^30.0.4",
+    "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "@coral-xyz/anchor": "^0.30.1",
+    "@solana/web3.js": "^1.95.7",
+    "chai": "^4.3.10"
   }
 }
